<resources>
    <string name="app_name">OpencvWithTesseract</string>
    <string name="puzzle_15_activity">Puzzle 15 Activity</string>
    <string name="camera_calibration">Camera Calibration</string>

    <string name="face_detection">Face Detection</string>
    <string name="tutorial1">Tutorial 1</string>
    <string name="tutorial2">Tutorial 2</string>
    <string name="tutorial3">Tutorial 3</string>

    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>
</resources>
